# py-calango-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  calango.spec  calango.yaml  main.py  mystique.json  pyproject.toml  run_executable.py  sample_config.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yaml  dependabot.yml
docs/: 00  PACKAGES.md  00 ROADMAP.md  01 Great Refactor.md  02 Globalization.md  03 Local RAG.md  04 MultiDB.md  05 Async Chat.md  06.md  07.md  LLMs.md
src/: app.py
src/calango/: core.py  database.py  themes.py
src/calango/services/: arena_service.py  chat_service.py
src/mystique/: core.py  database.py  themes.py
src/ui/: danger_room.py  dashboard.py  home.py  rinha.py  settings.py
tests/: conftest.py  test_core.py  test_database.py  test_theme.py
tests/e2e/: test_app_flow.py
tests/integration/: test_chat.py
tests/unit/: test_arena_service.py  test_chat_service.py
