[project]
name = "calango-ai"
version = "0.1.0"
description = "A shapeshifting local AI interface. Chat with GPT-4, Claude, and local models. 🇧🇷 🦎"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "litellm>=1.34.0",
    "tinydb>=4.8.0",
    "pyyaml>=6.0.1",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "watchdog>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calango"]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pyinstaller>=6.17.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
