[project]
name = "calango-ai"
version = "0.1.0"
description = "A shapeshifting local AI interface. Chat with GPT-4, Claude, and local models. 🇧🇷 🦎"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "litellm>=1.34.0",
    "tinydb>=4.8.0",
    "pyyaml>=6.0.1",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "watchdog>=4.0.0",
    "python-dotenv>=1.2.1",
    "pytest-cov>=7.0.0",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calango"]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pyinstaller>=6.17.0",
    "pre-commit>=4.5.1",
    "pip-audit>=2.10.0",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e"
]
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests"
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".github",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
mypy_path = "src"
exclude = ["src/calango/tests"]
explicit_package_bases = true

[tool.coverage.run]
# Measure coverage for the 'src' directory
source = ["src"]
# Files to exclude from the report
omit = [
    "src/calango/tests/*",  # Exclude all test files
    "src/app.py",           # Exclude the Streamlit entry point (optional, since it's hard to unit test)
]
